--- a/sugarProject/sugarProject.csproj
+++ b/sugarProject/sugarProject.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
+
 </Project>
