--- a/sugarProject/appsettings.json
+++ b/sugarProject/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    
+        "ConnectionStrings": {
+        "sugarProjectDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\1idok\\source\\repos\\kidokuwi\\sugarProject\\sugarProject\\App_Data\\usersDB.mdf;Integrated Security=True"
+    }
 }
