--- a/sugarProject/appsettings.json
+++ b/sugarProject/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
     "AllowedHosts": "*",
-    
-        "ConnectionStrings": {
-        "sugarProjectDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\1idok\\source\\repos\\kidokuwi\\sugarProject\\sugarProject\\App_Data\\usersDB.mdf;Integrated Security=True"
-    }
+
+  "ConnectionStrings": {
+    "sugarProjectDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\user1\\source\\repos\\kidokuwi\\sugarProject\\sugarProject\\App_Data\\usersDB.mdf;Integrated Security=True"
+  }
 }
