--- a/sugarProject/appsettings.json
+++ b/sugarProject/appsettings.json
@@ -1,13 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "sugarProjectDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\user1\\source\\repos\\kidokuwi\\sugarProject\\sugarProject\\App_Data\\usersDB.mdf;Integrated Security=True"
-  }
+    "ConnectionStrings": {
+        "sugarProjectDB": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\1idok\\source\\repos\\kidokuwi\\sugarProject\\sugarProject\\App_Data\\usersDB.mdf;Integrated Security=True"
+    } //Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\1idok\source\repos\kidokuwi\sugarProject\sugarProject\App_Data\usersDB.mdf;Integrated Security=True
+    // Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\user1\\source\\repos\\kidokuwi\\sugarProject\\sugarProject\\App_Data\\usersDB.mdf;Integrated Security=True
 }
