--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /sugarProject/App_Data/usersDB_log.ldf
+/sugarProject/App_Data/usersDB.mdf
